Fixed .gitattributes and added changes

--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Quiz Results</h1>
     <p>Your grade: <span th:text="${grade}">Grade</span>%</p>
-    <a href="/">Back to Home</a>
+    <a href="/greeting">Back to Home</a>
 </body>
 </html>
